# dt4mob-sensor-data-conversion

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  config.example.toml  example.config.toml  main.py  pyproject.toml
app/: sender.py  service.py
app/drivers/consumer/: __init__.py
app/drivers/consumer/mqtt/: __init__.py  consumer.py
app/drivers/consumer/webhook/: __init__.py  consumer.py
app/interfaces/: consumer.py
app/lib/: convert.py
app/models/: a_to_be.py  common.py  outsight.py
app/settings/: __init__.py  consumer.py  sender.py
docs/programmer-manual/: 01-architecture-overview.md  02-local-setup.md  03-project-structure.md  04-scripts-and-commands.md  05-key-implementation-details.md  06-deployment.md  metadata.yaml
docs/user-manual/: 01-overview.md  02-prerequisites.md  03-installation.md  04-usage-guide.md  05-configuration.md  06-current-versions.md  07-troubleshooting.md  metadata.yaml
